--- a/src/web/themes/custom/ps_theme/assets/scss/_search-page.scss
+++ b/src/web/themes/custom/ps_theme/assets/scss/_search-page.scss
@@ -68,8 +68,15 @@
     display: none !important;
   }
 
-  &__split {
+  &__wrapper {
     flex: 1 1 0;
+    max-height: 100%;
+    min-height: 0;
+    position: relative;
+  }
+
+  &__split {
+    height: 100%;
     max-height: 100%;
     min-height: 0;
     overflow: hidden;
@@ -789,19 +796,24 @@
     min-height: 0;
     overflow: hidden;
 
-    > .ps-search-view__split {
+    > .ps-search-view__wrapper {
+      flex: 1 1 0;
+      min-height: 0;
+    }
+
+    > .ps-search-view__wrapper > .ps-search-view__split {
       flex: 1 1 0;
       flex-direction: column;
       min-height: 0;
     }
 
-    > .ps-search-view__split > .col-lg-6:first-child {
+    > .ps-search-view__wrapper > .ps-search-view__split > .col-lg-6:first-child {
       flex: 1 1 0;
       height: auto !important;
       min-height: 0;
     }
 
-    > .ps-search-view__split > .col-lg-6:last-child {
+    > .ps-search-view__wrapper > .ps-search-view__split > .col-lg-6:last-child {
       flex: 0 0 clamp(220px, 40dvh, 400px);
       height: auto !important;
       max-height: clamp(220px, 40dvh, 400px);
